Allow the db type (mysql/postgresql) to be specified.
Also make precompiling the assets optional.

--- a/modules/rails/templates/database.yml.erb
+++ b/modules/rails/templates/database.yml.erb
@@ -1,5 +1,5 @@
 <%= @rails_env %>:
-  adapter: mysql2
+  adapter: <%= @db_type %>
   encoding: utf8
   reconnect: true
   database: <%= @database %>
