--- a/modules/rails/templates/upstart-unicorn.conf.erb
+++ b/modules/rails/templates/upstart-unicorn.conf.erb
@@ -2,4 +2,4 @@ start on starting <%= @app_name %>
 stop on stopping <%= @app_name %>
 respawn
 
-exec su - <%= @app_name %> -c 'cd /u/apps/<%= @app_name %>/current && RAILS_ENV=<%= @rails_env %> exec ruby1.9.1 -S bundle exec unicorn_rails -c /etc/unicorn/<%= @app_name %>.rb >> /u/apps/<%= @app_name %>/shared/log/unicorn.log 2>&1'
+exec su - <%= @app_name %> -c 'cd /u/apps/<%= @app_name %>/current && RAILS_ENV=<%= @rails_env %> exec <%= @bundle_exec %> unicorn_rails -c /etc/unicorn/<%= @app_name %>.rb >> /u/apps/<%= @app_name %>/shared/log/unicorn.log 2>&1'
