Try harder to make openvpn stable.

--- a/modules/openvpn/templates/server.conf.erb
+++ b/modules/openvpn/templates/server.conf.erb
@@ -23,7 +23,7 @@ server 172.16.28.0 255.255.255.0
 ifconfig-pool-persist ipp.txt
 
 client-to-client
-
+max-clients 200
 keepalive 10 120
 
 status openvpn-status.log
