--- a/modules/rails/templates/nginx-thin-vhost.conf.erb
+++ b/modules/rails/templates/nginx-thin-vhost.conf.erb
@@ -10,6 +10,6 @@ server {
   location @<%= @app_name %> {
     proxy_set_header Host $http_host;
     proxy_redirect off;
-    proxy_pass http://<%= @app_name %>_<%= @hostname %>_<%= @rails_env %>_unicorn;
+    proxy_pass http://<%= @app_name %>_<%= @hostname %>_<%= @rails_env %>_thin;
   }
 }
