--- a/modules/rails/templates/upstart-sidekiq.conf.erb
+++ b/modules/rails/templates/upstart-sidekiq.conf.erb
@@ -2,4 +2,10 @@ start on starting <%= @app_name %>
 stop on stopping <%= @app_name %>
 respawn
 
-exec su - <%= @app_name %> -c 'cd /u/apps/<%= @app_name %>/current && RAILS_ENV=<%= @rails_env %> exec <%= @bundle_exec %> sidekiq -P /u/apps/<%= @app_name %>/shared/pids/sidekiq.pid >> /u/apps/<%= @app_name %>/shared/log/sidekiq.log 2>&1'
+env RAILS_ENV="<%= @rails_env %>"
+export RAILS_ENV
+setuid <%= @app_name %>
+setgid <%= @app_name %>
+chdir /u/apps/<%= @app_name %>/current
+
+exec <%= @bundle_exec %> sidekiq -P /u/apps/<%= @app_name %>/shared/pids/sidekiq.pid
