--- a/modules/rails/templates/upstart-unicorn.conf.erb
+++ b/modules/rails/templates/upstart-unicorn.conf.erb
@@ -1,5 +1,10 @@
 start on starting <%= @app_name %>
 stop on stopping <%= @app_name %>
 respawn
+env RAILS_ENV="<%= @rails_env %>"
+export RAILS_ENV
+chdir /u/apps/<%= @app_name %>/current
+setuid <%= @app_name %>
+setgid <%= @app_name %>
 
-exec su - <%= @app_name %> -c 'cd /u/apps/<%= @app_name %>/current && RAILS_ENV=<%= @rails_env %> exec <%= @bundle_exec %> unicorn_rails -c /etc/unicorn/<%= @app_name %>.rb >> /u/apps/<%= @app_name %>/shared/log/unicorn.log 2>&1'
+exec <%= @bundle_exec %> unicorn_rails -c /etc/unicorn/<%= @app_name %>.rb
