--- a/modules/rails/templates/bundler-config.erb
+++ b/modules/rails/templates/bundler-config.erb
@@ -2,4 +2,4 @@
 BUNDLE_FROZEN: '1'
 BUNDLE_PATH: /u/apps/<%= @app_name %>/shared/bundle
 BUNDLE_DISABLE_SHARED_GEMS: '1'
-BUNDLE_WITHOUT: development,test
+BUNDLE_WITHOUT: development:test
