Postfix directly delivery, signing mail through opendkim.

--- a/modules/opendkim/templates/opendkim.conf.erb
+++ b/modules/opendkim/templates/opendkim.conf.erb
@@ -1,5 +1,7 @@
 Syslog yes
+LogWhy yes
+SyslogSuccess yes
 
-Domain <%= domain %>
+Domain <%= @mail_domain %>
 Selector <%= hostname %>
 KeyFile /etc/opendkim/<%= hostname %>.private
