Encrypt collectd communication and set appropriate max packet size.

--- a/modules/collectd/templates/plugins/network-agent.conf.erb
+++ b/modules/collectd/templates/plugins/network-agent.conf.erb
@@ -1,1 +1,5 @@
-Server "<%= @ipaddress_preferred %>"
+<Server "<%= @ipaddress_preferred %>">
+  SecurityLevel "encrypt"
+  Username "collectd"
+  Password "sooseeyushainiew"
+</Server>
