--- a/modules/collectd/templates/plugins/network-master.conf.erb
+++ b/modules/collectd/templates/plugins/network-master.conf.erb
@@ -1,1 +1,6 @@
-Listen "<%= @ipaddress_preferred %>"
+<Listen "<%= @ipaddress_preferred %>">
+  SecurityLevel "encrypt"
+  AuthFile "/etc/collectd/users"
+</Listen>
+
+MaxPacketSize 1452
