Be a destination for mail addressed to me.
Otherwise alias processing doesn't work.

--- a/modules/postfix/templates/main.cf.erb
+++ b/modules/postfix/templates/main.cf.erb
@@ -1,6 +1,5 @@
 myhostname = <%= fqdn %>
 myorigin = <%= @mail_domain %>
-mydestination =
+mydestination = <%= fqdn %>, localhost
 mynetworks_style = host
 relay_domains =
-smtp_host_lookup = native
