--- a/modules/puppet/templates/dashboard/nginx.conf.erb
+++ b/modules/puppet/templates/dashboard/nginx.conf.erb
@@ -8,6 +8,7 @@ server {
   }
 
   location @puppet_dashboard {
+    proxy_set_header Host $http_host;
     proxy_pass http://puppet_dashboard;
   }
 }
