Drop the puppet run to every 5 minutes in production.

--- a/modules/puppet/templates/puppet.conf.erb
+++ b/modules/puppet/templates/puppet.conf.erb
@@ -15,5 +15,9 @@
   reporturl            = http://puppet:8084/reports/upload
 
 [agent]
+<% if @domain == 'vagrant.vm' %>
   runinterval = 60
+<% else %>
+  runinterval = 300
+<% end %>
   report      = true
