--- a/modules/rails/templates/nginx-unicorn-vhost.conf.erb
+++ b/modules/rails/templates/nginx-unicorn-vhost.conf.erb
@@ -1,5 +1,8 @@
 server {
   listen 80 default;
+  <% if @domain == 'vagrant.vm' %>
+    listen 8090;
+  <% end %>
 
   root /u/apps/<%= @app_name %>/current/public;
 
