Don't store the reports, puppet dashboard is enough.

--- a/modules/puppet/templates/puppet.conf.erb
+++ b/modules/puppet/templates/puppet.conf.erb
@@ -11,7 +11,7 @@
 [master]
   storeconfigs         = true
   storeconfigs_backend = puppetdb
-  reports              = store, http
+  reports              = http
   reporturl            = http://puppet:8084/reports/upload
 
 [agent]
