--- a/modules/puppet/templates/puppet.conf.erb
+++ b/modules/puppet/templates/puppet.conf.erb
@@ -7,6 +7,7 @@
   templatedir = $confdir/templates
   server      = puppet.<%= @domain %>
   pluginsync  = true
+  graph       = true
 
 [master]
   storeconfigs         = true
