--- a/modules/postfix/templates/main.cf.erb
+++ b/modules/postfix/templates/main.cf.erb
@@ -1,5 +1,9 @@
 myhostname = <%= fqdn %>
 myorigin = <%= @mail_domain %>
+<% if @destination -%>
+mydestination = <%= @destination %>, <%= fqdn %>, localhost
+<% else -%>
 mydestination = <%= fqdn %>, localhost
+<% end -%>
 mynetworks_style = host
 relay_domains =
