--- a/modules/graphite/templates/nginx-vhost.conf.erb
+++ b/modules/graphite/templates/nginx-vhost.conf.erb
@@ -3,6 +3,9 @@ server {
 
   root /opt/graphite/webapp/content;
 
+  auth_basic 'ItIsOn Ops';
+  auth_basic_user_file /etc/nginx/htpasswd;
+
   location /media/ {
     root /usr/lib/python2.7/dist-packages/django/contrib/admin/media;
   }
