--- a/modules/nginx/templates/nginx-proxy-cache.conf.erb
+++ b/modules/nginx/templates/nginx-proxy-cache.conf.erb
@@ -4,3 +4,10 @@ proxy_cache_path <%= @nginx_proxy_cache_path %> levels=1:2
 
 proxy_temp_path <%= @nginx_proxy_temp_path %>;
 
+proxy_cache_key $scheme$proxy_host$uri$is_args$args;
+
+# Default validity.
+proxy_cache_valid  200 302 304 10m;
+proxy_cache_valid  301 1h;
+proxy_cache_valid  any 1m;
+
