--- a/modules/puppet/templates/dashboard/nginx.conf.erb
+++ b/modules/puppet/templates/dashboard/nginx.conf.erb
@@ -3,12 +3,20 @@ server {
 
   root /usr/share/puppet-dashboard/public;
 
+  satisfy any;
+
+  allow 127.0.0.1;
+  allow <%= ipaddress_preferred %>;
+  deny all;
+
+  auth_basic 'ItIsOn Ops';
+  auth_basic_user_file /etc/nginx/htpasswd;
+
   location / {
     try_files $uri/index.html $uri.html $uri @puppet_dashboard;
   }
 
   location @puppet_dashboard {
-    proxy_set_header Host $http_host;
     proxy_pass http://puppet_dashboard;
   }
 }
