Correct the auth realm.

--- a/modules/graphite/templates/nginx-vhost.conf.erb
+++ b/modules/graphite/templates/nginx-vhost.conf.erb
@@ -3,7 +3,7 @@ server {
 
   root /opt/graphite/webapp/content;
 
-  auth_basic 'ItIsOn Ops';
+  auth_basic 'Rubaidh Ops';
   auth_basic_user_file /etc/nginx/htpasswd;
 
   location /media/ {
