--- a/modules/puppet/templates/dashboard/nginx.conf.erb
+++ b/modules/puppet/templates/dashboard/nginx.conf.erb
@@ -9,7 +9,7 @@ server {
   allow <%= ipaddress_preferred %>;
   deny all;
 
-  auth_basic 'ItIsOn Ops';
+  auth_basic 'Rubaidh Ops';
   auth_basic_user_file /etc/nginx/htpasswd;
 
   location / {
