--- a/modules/rails/templates/nginx-ssl-vhost.conf.erb
+++ b/modules/rails/templates/nginx-ssl-vhost.conf.erb
@@ -10,11 +10,31 @@ server {
 
   root /u/apps/<%= @app_name %>/current/public;
 
+  error_page 404         /404.html;
+  error_page 502 503 504 /500.html;
+
+  location /assets/ {
+    # Serve static assets gzipped. The http_version and proxied configs are for
+    # the benefit of serving via CloudFront.
+    gzip_static       on;
+    gzip_http_version 1.0;
+    gzip_proxied      any;
+
+    # Since the files have a unique hash to identify them, they never expire.
+    # Well, unless somebody is stupid enough to request the version without the
+    # hash, but who would do that?
+    expires max;
+    add_header Cache-Control public;
+  }
+
   location / {
-    try_files $uri/index.html $uri.html $uri @<%= @app_name %>;
+    try_files /system/maintenance.html $uri/index.html $uri.html $uri @<%= @app_name %>;
   }
 
   location @<%= @app_name %> {
     proxy_pass http://<%= @app_name %>_<%= @hostname %>_<%= @rails_env %>;
+
+    proxy_set_header Host              $host;
+    proxy_set_header X-Forwarded-Proto https;
   }
 }
