More explicit heuristic for running in vagrant.

--- a/modules/errbit/templates/config.yml.erb
+++ b/modules/errbit/templates/config.yml.erb
@@ -20,7 +20,7 @@ deployment:
 
 github_authentication: true
 
-<% if @domain == 'vagrant.vm' %>
+<% if @vagrant == 'true' %>
 github_client_id:    '77e8cc51759dad1cfdc5'
 github_secret:       'fc5b63370eb013a241a774207f258da4a043c3d3'
 github_access_scope: ['repo']
