--- a/modules/puppet/templates/puppet.conf.erb
+++ b/modules/puppet/templates/puppet.conf.erb
@@ -16,7 +16,7 @@
   reporturl            = http://puppet:8084/reports/upload
 
 [agent]
-<% if @domain == 'vagrant.vm' %>
+<% if @vagrant == 'true' %>
   runinterval = 60
 <% else %>
   runinterval = 300
