Parameterise the puppetmaster hostname.

--- a/modules/puppet/templates/puppet-agent.conf.erb
+++ b/modules/puppet/templates/puppet-agent.conf.erb
@@ -1,7 +1,7 @@
 
 [main]
-  server      = puppet.<%= @domain %>
-  pluginsync  = true
+  server     = <%= @puppetmaster_hostname %>
+  pluginsync = true
 
 [agent]
 <% if @vagrant == 'true' %>
