--- a/modules/puppet/templates/dashboard/puppet-dashboard-init.erb
+++ b/modules/puppet/templates/dashboard/puppet-dashboard-init.erb
@@ -38,8 +38,20 @@ check_dashboard_enabled_option() {
     fi
 }
 
+check_puppet_dashboard_status() {
+    status_of_proc -p ${PIDFILE} ${DASHBOARD_RUBY} "Puppet Dashboard"
+}
+
 start_puppet_dashboard() {
     start-stop-daemon --start --quiet --oknodo --background --make-pidfile --pidfile ${PIDFILE} --user ${DASHBOARD_USER} --chuid ${DASHBOARD_USER} --exec ${DASHBOARD_RUBY} -- ${DASHBOARD_HOME}/script/server -e ${DASHBOARD_ENVIRONMENT} -p ${DASHBOARD_PORT} -b ${DASHBOARD_IFACE}
+
+    # This is a dirty, dirty hack, but it's rather difficult to get
+    # script/server to daemonize in any way, and still give us useful debugging
+    # output (or a real exit code) if it fails to start.
+
+    sleep 5
+
+    check_puppet_dashboard_status
 }
 
 case $1 in
