Remove deprecated references to variables in templates.

--- a/modules/mcollective/templates/server.cfg.erb
+++ b/modules/mcollective/templates/server.cfg.erb
@@ -11,7 +11,7 @@ securityprovider = psk
 plugin.psk = unset
 
 connector = stomp
-plugin.stomp.host = puppet.<%= domain %>
+plugin.stomp.host = puppet.<%= @domain %>
 plugin.stomp.port = 61613
 plugin.stomp.user = mcollective
 plugin.stomp.password = secret
