--- a/modules/openvpn/templates/agent.conf.erb
+++ b/modules/openvpn/templates/agent.conf.erb
@@ -9,14 +9,14 @@ client
 dev tun
 
 proto tcp
-remote vpnmaster.<%= domain %> 1194
+remote vpnmaster.<%= @domain %> 1194
 nobind
 
 resolv-retry infinite
 
 ca /var/lib/puppet/ssl/certs/ca.pem
-cert /var/lib/puppet/ssl/certs/<%= fqdn %>.pem
-key /var/lib/puppet/ssl/private_keys/<%= fqdn %>.pem
+cert /var/lib/puppet/ssl/certs/<%= @fqdn %>.pem
+key /var/lib/puppet/ssl/private_keys/<%= @fqdn %>.pem
 
 comp-lzo
 verb 3
