--- a/modules/mysql/templates/server/backup/etc-default-mysql-server-backup.erb
+++ b/modules/mysql/templates/server/backup/etc-default-mysql-server-backup.erb
@@ -2,3 +2,9 @@ MYSQL_USERNAME=<%= @backup_username %>
 MYSQL_PASSWORD=<%= @backup_password %>
 AWS_BUCKET=<%= @aws_bucket %>
 S3_PREFIX=<%= @fqdn %>
+
+BACKUP_BASE=/var/backups/mysql
+BACKUP_TMP=${BACKUP_BASE}/tmp
+FULL_BACKUP_DIR="${BACKUP_BASE}/full"
+COMMON_INNOBACKUPEX_OPTIONS="--user=${MYSQL_USERNAME} --password=${MYSQL_PASSWORD}"
+S3CMD_OPTIONS="-c /etc/s3cmd.cfg -v"
