Tweak logrotation to allow for more control.

--- a/modules/logrotate/templates/log_file_config.erb
+++ b/modules/logrotate/templates/log_file_config.erb
@@ -1,8 +1,26 @@
 <%= @log_file %> {
-  daily
+  <%= @frequency %>
   missingok
-  rotate <%= @days %>
+  rotate <%= @keep %>
+  compress
   delaycompress
   notifempty
-  copytruncate
+  <% if @owner && @group && @mode -%>
+    create <%= @mode %> <%= @owner %> <%= @group %>
+    sharedscripts
+  <% else -%>
+    copytruncate
+  <% end %>
+
+  <% if @prerotate -%>
+    prerotate
+      <%= @prerotate %>
+    endscript
+  <% end -%>
+
+  <% if @postrotate -%>
+    postrotate
+      <%= @postrotate %>
+    endscript
+  <% end -%>
 }
