--- a/modules/opendkim/templates/opendkim.conf.erb
+++ b/modules/opendkim/templates/opendkim.conf.erb
@@ -3,5 +3,5 @@ LogWhy yes
 SyslogSuccess yes
 
 Domain <%= @mail_domain %>
-Selector <%= hostname %>
-KeyFile /etc/opendkim/<%= hostname %>.private
+Selector <%= @hostname %>
+KeyFile /etc/opendkim/<%= @hostname %>.private
