Get the company name right. :)

--- a/modules/nginx/templates/vhost_to_upstream_common.conf.erb
+++ b/modules/nginx/templates/vhost_to_upstream_common.conf.erb
@@ -13,7 +13,7 @@ root <%= @root %>;
   allow <%= @ipaddress_preferred %>;
   deny all;
 
-  auth_basic 'Ewgeco Ops';
+  auth_basic 'Rubaidh Ops';
   auth_basic_user_file /etc/nginx/htpasswd;
 <% end -%>
 
