--- a/modules/nagios/templates/nginx.conf.erb
+++ b/modules/nagios/templates/nginx.conf.erb
@@ -5,7 +5,7 @@ server {
   <% end -%>
   server_name nagios nagios.<%= @domain %>;
 
-  auth_basic 'Ewgeco Ops';
+  auth_basic 'Rubaidh Ops';
   auth_basic_user_file /etc/nginx/htpasswd;
 
   root /usr/share/nagios3/htdocs;
