--- a/modules/rails/templates/nginx-vhost.conf.erb
+++ b/modules/rails/templates/nginx-vhost.conf.erb
@@ -1,2 +1,7 @@
+# Drop all obviously bogus traffic.
+location ~ \.(php|aspx|jsp|cgi)$ {
+  return 410;
+}
+
 error_page 404         /404.html;
 error_page 502 503 504 /500.html;
