Convert facter 'true' vagrant fact to a bool.

--- a/modules/nagios/templates/nginx.conf.erb
+++ b/modules/nagios/templates/nginx.conf.erb
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  <% if @vagrant == 'true' -%>
+  <% if str2bool(@vagrant) == true -%>
   listen 8085;
   <% end -%>
   server_name nagios nagios.<%= @domain %>;
