--- a/modules/puppet/templates/puppet-agent.conf.erb
+++ b/modules/puppet/templates/puppet-agent.conf.erb
@@ -1,10 +1,4 @@
-
-[main]
-  server     = <%= @puppetmaster_hostname %>
-  pluginsync = true
-
-[agent]
-<% if str2bool(@vagrant) == true %>
+<% if scope.function_str2bool([@vagrant]) %>
   runinterval = 60
   graph       = true
 <% else %>
