--- a/modules/puppet/templates/puppet-dashboard.conf.erb
+++ b/modules/puppet/templates/puppet-dashboard.conf.erb
@@ -1,4 +1,2 @@
-
-[master]
-  reports   = http
-  reporturl = http://puppet:8084/reports/upload
+reports   = http
+reporturl = http://puppet/reports/upload
