--- a/modules/nginx/templates/ssl_vhost_to_upstream.conf.erb
+++ b/modules/nginx/templates/ssl_vhost_to_upstream.conf.erb
@@ -1,9 +1,9 @@
 server {
-  listen 443;
+  listen <%= @ssl_port %>;
 
   ssl on;
-  ssl_certificate /var/lib/puppet/ssl/certs/<%= @fqdn %>.pem;
-  ssl_certificate_key /var/lib/puppet/ssl/private_keys/<%= @fqdn %>.pem;
+  ssl_certificate <%= @ssl_certificate %>;
+  ssl_certificate_key <%= @ssl_certificate_key %>;
 
   <%= scope.function_template(['nginx/vhost_to_upstream_common.conf.erb']) %>
 }
