--- a/modules/nginx/templates/vhost_to_upstream.conf.erb
+++ b/modules/nginx/templates/vhost_to_upstream.conf.erb
@@ -1,6 +1,6 @@
 server {
-  listen 80;
-  <% if str2bool(@vagrant) == true && @vagrant_additional_port -%>
+  listen <%= @main_port %>;
+  <% if scope.function_str2bool([@vagrant]) && @vagrant_additional_port -%>
     listen <%= @vagrant_additional_port %>;
   <% end -%>
   <% if @additional_port -%>
